# cli-agants

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cli_agents/: cli.py
cli_agents/commands/: branch.py  chat.py  commit.py  perp.py  url.py
